# Ingredient2Recipe

./: .gitignore  README.md  main.py  pyproject.toml  設計.md
flaskr/: __init__.py  config.yml
flaskr/controllers/: controller.py
flaskr/services/: getFromApi.py
flaskr/templates/: home.html  mylist.html
myproject/Ingredient2Recipe/: apps.py
myproject/myproject/: settings.py
