[project]
name = "ingredient2recipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "jinja2>=3.1.6",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]
